--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,11 +7,9 @@
 
 {% block content %}
 
-
 <div class="container-fluid header-background px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
   <div class="card-login card0 border-0">
     <div class="row d-flex">
-
       <div class="col-lg-12">
         <div class="card2 card-login border-0 px-4 py-5">
           <div class="row mb-4 px-3">
@@ -58,10 +56,10 @@
                   class="text-danger links" href="{{ signup_url }}">Register</a></small>
             </div>
           </div>
-
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  {% endblock %}
+{% endblock %}
