--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,20 +6,15 @@
 
 {% block content %}
 
-
-
 <div class="container-fluid header-background px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
   <div class="card-login card0 border-0">
     <div class="row d-flex">
       <div class="col-lg-12">
         <div class="card2 card-login border-0 px-4 py-5">
           <div class="row mb-4 px-3">
- 
-
             <h1>{% trans "Sign Up" %}</h1>
-
-            <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}" class="text-danger links">sign in</a>.{% endblocktrans %}</p>
-            
+            <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}"
+                class="text-danger links">sign in</a>.{% endblocktrans %}</p>
             <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
               {% csrf_token %}
               {{ form.as_p }}
@@ -28,15 +23,11 @@
               {% endif %}
               <button type="submit" class="btn btn-blue text-center">{% trans "Sign Up" %}</button>
             </form>
-
-
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-
 
 {% endblock %}
