--- a/templates/base.html
+++ b/templates/base.html
@@ -178,10 +178,10 @@
 
     <div class="row social-links">
       <div class="col  text-center social-links">
-        <a href="" target="_blank"><i class="fab fa-facebook-f"></i>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i>
 
         </a>
-        <a href="" target="_blank"><i class="fab fa-pinterest"></i>
+        <a href="https://www.pinterest.com/" target="_blank"><i class="fab fa-pinterest"></i>
 
         </a>
 
